FJadeParser.py
# Generated from FJade.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FJadeParser ( Parser ):

    grammarFileName = "FJade.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'|'", "'('", "')'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'ELSE'", "'FUNCTION'", 
                     "'PROCESS'", "'PLAYER_EVENT'", "'EVENT'", "'ENTITY_EVENT'", 
                     "'loc'", "'item'", "'var'", "'val'", "'{}'", "'{'", 
                     "'}'", "'<'", "'>'", "'['", "']'", "';'", "':'", "','", 
                     "'!'", "'@'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "MULTILINECOMMENT", "NL", "COMMENT", "WS", "TARGET", 
                      "ELSE", "FUNCTION", "PROCESS", "PLAYEREVENT", "PLAYEREVENTALT", 
                      "ENTITYEVENT", "LOCATION", "ITEM", "VARIABLE", "VALUE", 
                      "CBRACE", "LBRACE", "RBRACE", "LESSTHAN", "GREATERTHAN", 
                      "LBRACK", "RBRACK", "SEMI", "COLON", "COMMA", "NEGATE", 
                      "SELECTOR", "STRING", "NUMBER", "CATEGORY", "NAME", 
                      "ACTION" ]

    RULE_fjade = 0
    RULE_func = 1
    RULE_proc = 2
    RULE_playerev = 3
    RULE_entityev = 4
    RULE_stmt = 5
    RULE_simplestmt = 6
    RULE_blockedstmt = 7
    RULE_elsestmt = 8
    RULE_classicblockedstmt = 9
    RULE_paramslist = 10
    RULE_expr = 11
    RULE_vector = 12
    RULE_location = 13
    RULE_item = 14
    RULE_variable = 15
    RULE_gval = 16

    ruleNames =  [ "fjade", "func", "proc", "playerev", "entityev", "stmt", 
                   "simplestmt", "blockedstmt", "elsestmt", "classicblockedstmt", 
                   "paramslist", "expr", "vector", "location", "item", "variable", 
                   "gval" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    MULTILINECOMMENT=4
    NL=5
    COMMENT=6
    WS=7
    TARGET=8
    ELSE=9
    FUNCTION=10
    PROCESS=11
    PLAYEREVENT=12
    PLAYEREVENTALT=13
    ENTITYEVENT=14
    LOCATION=15
    ITEM=16
    VARIABLE=17
    VALUE=18
    CBRACE=19
    LBRACE=20
    RBRACE=21
    LESSTHAN=22
    GREATERTHAN=23
    LBRACK=24
    RBRACK=25
    SEMI=26
    COLON=27
    COMMA=28
    NEGATE=29
    SELECTOR=30
    STRING=31
    NUMBER=32
    CATEGORY=33
    NAME=34
    ACTION=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FjadeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func(self):
            return self.getTypedRuleContext(FJadeParser.FuncContext,0)


        def EOF(self):
            return self.getToken(FJadeParser.EOF, 0)

        def proc(self):
            return self.getTypedRuleContext(FJadeParser.ProcContext,0)


        def playerev(self):
            return self.getTypedRuleContext(FJadeParser.PlayerevContext,0)


        def entityev(self):
            return self.getTypedRuleContext(FJadeParser.EntityevContext,0)


        def getRuleIndex(self):
            return FJadeParser.RULE_fjade

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFjade" ):
                listener.enterFjade(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFjade" ):
                listener.exitFjade(self)




    def fjade(self):

        localctx = FJadeParser.FjadeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_fjade)
        try:
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.func()
                self.state = 35
                self.match(FJadeParser.EOF)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.proc()
                self.state = 38
                self.match(FJadeParser.EOF)
                pass
            elif token in [12, 13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.playerev()
                self.state = 41
                self.match(FJadeParser.EOF)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.entityev()
                self.state = 44
                self.match(FJadeParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(FJadeParser.FUNCTION, 0)

        def NAME(self):
            return self.getToken(FJadeParser.NAME, 0)

        def LBRACE(self):
            return self.getToken(FJadeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FJadeParser.RBRACE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FJadeParser.StmtContext)
            else:
                return self.getTypedRuleContext(FJadeParser.StmtContext,i)


        def getRuleIndex(self):
            return FJadeParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)




    def func(self):

        localctx = FJadeParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(FJadeParser.FUNCTION)
            self.state = 49
            self.match(FJadeParser.NAME)
            self.state = 50
            self.match(FJadeParser.LBRACE)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==33:
                self.state = 51
                self.stmt()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self.match(FJadeParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCESS(self):
            return self.getToken(FJadeParser.PROCESS, 0)

        def NAME(self):
            return self.getToken(FJadeParser.NAME, 0)

        def LBRACE(self):
            return self.getToken(FJadeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FJadeParser.RBRACE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FJadeParser.StmtContext)
            else:
                return self.getTypedRuleContext(FJadeParser.StmtContext,i)


        def getRuleIndex(self):
            return FJadeParser.RULE_proc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProc" ):
                listener.enterProc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProc" ):
                listener.exitProc(self)




    def proc(self):

        localctx = FJadeParser.ProcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_proc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(FJadeParser.PROCESS)
            self.state = 60
            self.match(FJadeParser.NAME)
            self.state = 61
            self.match(FJadeParser.LBRACE)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==33:
                self.state = 62
                self.stmt()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(FJadeParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlayerevContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(FJadeParser.NAME, 0)

        def LBRACE(self):
            return self.getToken(FJadeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FJadeParser.RBRACE, 0)

        def PLAYEREVENT(self):
            return self.getToken(FJadeParser.PLAYEREVENT, 0)

        def PLAYEREVENTALT(self):
            return self.getToken(FJadeParser.PLAYEREVENTALT, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FJadeParser.StmtContext)
            else:
                return self.getTypedRuleContext(FJadeParser.StmtContext,i)


        def getRuleIndex(self):
            return FJadeParser.RULE_playerev

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlayerev" ):
                listener.enterPlayerev(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlayerev" ):
                listener.exitPlayerev(self)




    def playerev(self):

        localctx = FJadeParser.PlayerevContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_playerev)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            _la = self._input.LA(1)
            if not(_la==12 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 71
            self.match(FJadeParser.NAME)
            self.state = 72
            self.match(FJadeParser.LBRACE)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==33:
                self.state = 73
                self.stmt()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(FJadeParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityevContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTITYEVENT(self):
            return self.getToken(FJadeParser.ENTITYEVENT, 0)

        def NAME(self):
            return self.getToken(FJadeParser.NAME, 0)

        def LBRACE(self):
            return self.getToken(FJadeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FJadeParser.RBRACE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FJadeParser.StmtContext)
            else:
                return self.getTypedRuleContext(FJadeParser.StmtContext,i)


        def getRuleIndex(self):
            return FJadeParser.RULE_entityev

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntityev" ):
                listener.enterEntityev(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntityev" ):
                listener.exitEntityev(self)




    def entityev(self):

        localctx = FJadeParser.EntityevContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_entityev)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(FJadeParser.ENTITYEVENT)
            self.state = 82
            self.match(FJadeParser.NAME)
            self.state = 83
            self.match(FJadeParser.LBRACE)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==33:
                self.state = 84
                self.stmt()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(FJadeParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simplestmt(self):
            return self.getTypedRuleContext(FJadeParser.SimplestmtContext,0)


        def blockedstmt(self):
            return self.getTypedRuleContext(FJadeParser.BlockedstmtContext,0)


        def getRuleIndex(self):
            return FJadeParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = FJadeParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stmt)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.simplestmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.blockedstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimplestmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CATEGORY(self):
            return self.getToken(FJadeParser.CATEGORY, 0)

        def NAME(self):
            return self.getToken(FJadeParser.NAME, 0)

        def paramslist(self):
            return self.getTypedRuleContext(FJadeParser.ParamslistContext,0)


        def SEMI(self):
            return self.getToken(FJadeParser.SEMI, 0)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(FJadeParser.STRING)
            else:
                return self.getToken(FJadeParser.STRING, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(FJadeParser.COLON)
            else:
                return self.getToken(FJadeParser.COLON, i)

        def NEGATE(self):
            return self.getToken(FJadeParser.NEGATE, 0)

        def SELECTOR(self):
            return self.getToken(FJadeParser.SELECTOR, 0)

        def TARGET(self):
            return self.getToken(FJadeParser.TARGET, 0)

        def getRuleIndex(self):
            return FJadeParser.RULE_simplestmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimplestmt" ):
                listener.enterSimplestmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimplestmt" ):
                listener.exitSimplestmt(self)




    def simplestmt(self):

        localctx = FJadeParser.SimplestmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_simplestmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(FJadeParser.CATEGORY)
            self.state = 97
            self.match(FJadeParser.NAME)
            self.state = 98
            self.paramslist()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 99
                self.match(FJadeParser.T__0)
                self.state = 100
                self.match(FJadeParser.STRING)
                self.state = 101
                self.match(FJadeParser.COLON)
                self.state = 102
                self.match(FJadeParser.STRING)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 108
                self.match(FJadeParser.NEGATE)


            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 111
                self.match(FJadeParser.SELECTOR)
                self.state = 112
                self.match(FJadeParser.TARGET)


            self.state = 115
            self.match(FJadeParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockedstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classicblockedstmt(self):
            return self.getTypedRuleContext(FJadeParser.ClassicblockedstmtContext,0)


        def elsestmt(self):
            return self.getTypedRuleContext(FJadeParser.ElsestmtContext,0)


        def getRuleIndex(self):
            return FJadeParser.RULE_blockedstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockedstmt" ):
                listener.enterBlockedstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockedstmt" ):
                listener.exitBlockedstmt(self)




    def blockedstmt(self):

        localctx = FJadeParser.BlockedstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_blockedstmt)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [33]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.classicblockedstmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.elsestmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElsestmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(FJadeParser.ELSE, 0)

        def LBRACE(self):
            return self.getToken(FJadeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FJadeParser.RBRACE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FJadeParser.StmtContext)
            else:
                return self.getTypedRuleContext(FJadeParser.StmtContext,i)


        def getRuleIndex(self):
            return FJadeParser.RULE_elsestmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElsestmt" ):
                listener.enterElsestmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElsestmt" ):
                listener.exitElsestmt(self)




    def elsestmt(self):

        localctx = FJadeParser.ElsestmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_elsestmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(FJadeParser.ELSE)
            self.state = 122
            self.match(FJadeParser.LBRACE)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==33:
                self.state = 123
                self.stmt()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 129
            self.match(FJadeParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassicblockedstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CATEGORY(self):
            return self.getToken(FJadeParser.CATEGORY, 0)

        def NAME(self):
            return self.getToken(FJadeParser.NAME, 0)

        def paramslist(self):
            return self.getTypedRuleContext(FJadeParser.ParamslistContext,0)


        def LBRACE(self):
            return self.getToken(FJadeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FJadeParser.RBRACE, 0)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(FJadeParser.STRING)
            else:
                return self.getToken(FJadeParser.STRING, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(FJadeParser.COLON)
            else:
                return self.getToken(FJadeParser.COLON, i)

        def NEGATE(self):
            return self.getToken(FJadeParser.NEGATE, 0)

        def SELECTOR(self):
            return self.getToken(FJadeParser.SELECTOR, 0)

        def TARGET(self):
            return self.getToken(FJadeParser.TARGET, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FJadeParser.StmtContext)
            else:
                return self.getTypedRuleContext(FJadeParser.StmtContext,i)


        def getRuleIndex(self):
            return FJadeParser.RULE_classicblockedstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassicblockedstmt" ):
                listener.enterClassicblockedstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassicblockedstmt" ):
                listener.exitClassicblockedstmt(self)




    def classicblockedstmt(self):

        localctx = FJadeParser.ClassicblockedstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_classicblockedstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(FJadeParser.CATEGORY)
            self.state = 132
            self.match(FJadeParser.NAME)
            self.state = 133
            self.paramslist()
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 134
                self.match(FJadeParser.T__0)
                self.state = 135
                self.match(FJadeParser.STRING)
                self.state = 136
                self.match(FJadeParser.COLON)
                self.state = 137
                self.match(FJadeParser.STRING)
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 143
                self.match(FJadeParser.NEGATE)


            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 146
                self.match(FJadeParser.SELECTOR)
                self.state = 147
                self.match(FJadeParser.TARGET)


            self.state = 150
            self.match(FJadeParser.LBRACE)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==33:
                self.state = 151
                self.stmt()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 157
            self.match(FJadeParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamslistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FJadeParser.ExprContext)
            else:
                return self.getTypedRuleContext(FJadeParser.ExprContext,i)


        def getRuleIndex(self):
            return FJadeParser.RULE_paramslist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamslist" ):
                listener.enterParamslist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamslist" ):
                listener.exitParamslist(self)




    def paramslist(self):

        localctx = FJadeParser.ParamslistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramslist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 23627005952) != 0):
                self.state = 159
                self.expr()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(FJadeParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(FJadeParser.NUMBER, 0)

        def NAME(self):
            return self.getToken(FJadeParser.NAME, 0)

        def vector(self):
            return self.getTypedRuleContext(FJadeParser.VectorContext,0)


        def location(self):
            return self.getTypedRuleContext(FJadeParser.LocationContext,0)


        def item(self):
            return self.getTypedRuleContext(FJadeParser.ItemContext,0)


        def variable(self):
            return self.getTypedRuleContext(FJadeParser.VariableContext,0)


        def gval(self):
            return self.getTypedRuleContext(FJadeParser.GvalContext,0)


        def getRuleIndex(self):
            return FJadeParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = FJadeParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expr)
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.match(FJadeParser.STRING)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.match(FJadeParser.NUMBER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 167
                self.match(FJadeParser.NAME)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 168
                self.vector()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 169
                self.location()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 170
                self.item()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 171
                self.variable()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 172
                self.gval()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LESSTHAN(self):
            return self.getToken(FJadeParser.LESSTHAN, 0)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(FJadeParser.NUMBER)
            else:
                return self.getToken(FJadeParser.NUMBER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(FJadeParser.COMMA)
            else:
                return self.getToken(FJadeParser.COMMA, i)

        def GREATERTHAN(self):
            return self.getToken(FJadeParser.GREATERTHAN, 0)

        def getRuleIndex(self):
            return FJadeParser.RULE_vector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVector" ):
                listener.enterVector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVector" ):
                listener.exitVector(self)




    def vector(self):

        localctx = FJadeParser.VectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_vector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(FJadeParser.LESSTHAN)
            self.state = 176
            self.match(FJadeParser.NUMBER)
            self.state = 177
            self.match(FJadeParser.COMMA)
            self.state = 178
            self.match(FJadeParser.NUMBER)
            self.state = 179
            self.match(FJadeParser.COMMA)
            self.state = 180
            self.match(FJadeParser.NUMBER)
            self.state = 181
            self.match(FJadeParser.GREATERTHAN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
